// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesList component Should render according to the snapshot with movies count equals to 8 or less 1`] = `
<div>
  <div
    class="catalog__movies-list"
  >
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/1"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/2"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/3"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/4"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/5"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/6"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/7"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/8"
        />
      </h3>
    </article>
  </div>
</div>
`;

exports[`MoviesList component Should render according to the snapshot with movies count greater than 8 1`] = `
<div>
  <div
    class="catalog__movies-list"
  >
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/1"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/2"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/3"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/4"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/5"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/6"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/7"
        />
      </h3>
    </article>
    <article
      class="small-movie-card catalog__movies-card"
    >
      <div
        class="small-movie-card__image"
      >
        <img
          alt=""
          height="175"
          src="fakePreview"
          width="280"
        />
      </div>
      <h3
        class="small-movie-card__title"
      >
        <a
          class="small-movie-card__link"
          href="/films/8"
        />
      </h3>
    </article>
  </div>
  <div
    class="catalog__more"
  >
    <button
      class="catalog__button"
      type="button"
    >
      Show more
    </button>
  </div>
</div>
`;

exports[`MoviesList component Should render according to the snapshot without any movies in list 1`] = `
<div>
  <div
    class="catalog__movies-list"
  />
</div>
`;
